@@ -1,3 +1,9 @@
+Mon Jun  1 03:44:03 1998  Catherine Moore <clm@cygnus.com>
+ 
+        * config/sh/sh.h (MAX_OFILE_ALIGNMENT): Define.
+
+        * varasm.c (assemble_variable): Augment alignment warning.
+
 Mon Jun  1 12:14:28 1998  Michael Meissner  <meissner@cygnus.com>
 
 	* config/fp-bit.c (_fp{add,div}_parts): Return correct IEEE result
